fix: solve unexpected wrapping of nav menu

--- a/src/assets/styles/components/_brand.scss
+++ b/src/assets/styles/components/_brand.scss
@@ -1,3 +1,7 @@
+.brand {
+    flex: 1;
+}
+
 .brand__desktop {
     display: none;
 }
